# Rigid-Body-Subsystem

./: CMakeLists.txt  RIGID_PIXEL_SYSTEM.md  imgui.ini
.cache/clangd/index/: BasicConnectivityPolicy.cpp.1CC35CDAFEBAE349.idx  BasicConnectivityPolicy.cpp.24E30FFB6F83EEFF.idx  Box2dBackend.cpp.1FF6C5E1A30C8578.idx  Box2dBackend.cpp.EE83357A6D77385D.idx  IStabilityPolicy.hpp.72738B559018BB61.idx  IStabilityPolicy.hpp.E33DFE99CDC1D339.idx  (+1926 more)
include/: @  IStabilityPolicy.hpp  MotionSystem.hpp  RegionExtractor.hpp  RegionMesher.hpp  RegionMotion.hpp  RegionMotionApplier.hpp  RegionStability.hpp  RegionTracker.hpp  RegionType.hpp  RigidBodyManager.hpp  RigidPixelConfig.hpp  RigidPixelGrid.hpp  RigidPixelSystem.hpp  RigidPixelTypes.hpp  RigidPixelWorldView.hpp  StabilityResolver.hpp  StructuralGraph.hpp  StructuralTracker.hpp  regionScratch.hpp  runic_classifier.h  simple_canvas.h
include/RigSys/: Box2dBackend.hpp  RigBackend.hpp  RigTypes.hpp
ml/: INTEGRATION.md  canvas_iface.h  draw_app  draw_app.cpp  main.cpp  model.py  runic_app  runic_classifier.h  runic_engine.py
ml/dataset/: r0.aseprite  r1.aseprite  r5.aseprite
mufidofufi/: export_weights.py  image_loader.py  runic_model.h5
mufidofufi/dataset/: order.sh  r2.aseprite  r3.aseprite  r4.aseprite  r6.aseprite
src/: BasicConnectivityPolicy.cpp  RegionExtractor.cpp  RegionMesher.cpp  RegionMotion.cpp  RegionMotionApplier.cpp  RegionTracker.cpp  RigidBodyManager.cpp  RigidPixelSystem.cpp  StabilityResolver.cpp  StabilitySystem.cpp  StructuralGraph.cpp  StructuralTracker.cpp  main.cpp  newoldmain.txt  oldmain.txt
